--- a/css/drops.css
+++ b/css/drops.css
@@ -2,7 +2,7 @@
 
 body{margin: 0;background: rgba(30, 30, 30, 1.0)}
 .hero-image {
-  background-image: url("img/dropsandbits.jpg");
+  background-image: url("img/drops.png");
   background-color: rgba(255, 255, 255, 1.0);
   /*height: 500px; */
   background-position: center; /* Center the image */
