--- a/css/drops.css
+++ b/css/drops.css
@@ -28,26 +28,28 @@ div{-webkit-text-size-adjust:none}
 .drops .minibio{height:auto;position:absolute;margin:0;font-family:'Open Sans',Helvetica,Arial,serif;font-weight:400;font-style:normal;color:rgba(200,200,200,1.0);text-align:center;line-height:24.0px;}
 .drops .minibio span{font-weight:600;font-style:normal;text-align:center;}
 .drops .minibio a{color:rgba(255,255,255,1.0);text-align: center;text-decoration: none;}
-.drops .minibio a:hover{color:rgba(170,154,125,1.0);text-align:center;}
+.drops .minibio a:hover{color:rgba(,1.0);text-align:center;}
 .drops .minibio .button{background-color:rgba(255,255,255,1.0);border: none;width: 220px;left: 50px;font-family:'Open Sans',Helvetica,Arial,serif;font-weight:600;font-style:normal;font-size:16.0px;padding-top:12px;padding-bottom:12px;margin-top:16px;margin-bottom:0px;text-align:center;text-decoration:none;color:rgba(0,0,0,1.0);display:inline-block;cursor: pointer;border-radius: 24px;}
-.drops .minibio .button:hover{background-color:rgba(170,154,125,1.0);color:rgba(0,0,0,1.0);text-decoration:none}
+.drops .minibio .button:hover{background-color:rgba(188,226,222,1.0);color:rgba(0,0,0,1.0);text-decoration:none}
 .drops .minibio .secondary-button{border: 2px solid rgba(180,180,180,1.0);width: 220px; color:rgba(180,180,180,1.0);font-family:'Open Sans',Helvetica,Arial,serif;font-weight:600;font-style:normal;font-size:16.0px;padding-top: 12px;padding-bottom: 12px;margin-top: 12px;display: inline-block;margin-bottom: 16px;text-align: center;text-decoration: none;border-radius: 24px;}
-.drops .minibio .secondary-button:hover{border: 2px solid rgba(170,154,125,1.0);width: 220px; color:rgba(170,154,125,1.0);font-family:'Open Sans',Helvetica,Arial,serif;font-weight:600;font-style:normal;font-size:16.0px;padding-top: 12px;padding-bottom: 12px;margin-top: 12px;display: inline-block;margin-bottom: 16px;text-align: center;text-decoration: none;border-radius: 24px;}
+.drops .minibio .secondary-button:hover{border: 2px solid rgba(188,226,222,1.0);width: 220px; color:rgba(188,226,222,1.0);font-family:'Open Sans',Helvetica,Arial,serif;font-weight:600;font-style:normal;font-size:16.0px;padding-top: 12px;padding-bottom: 12px;margin-top: 12px;display: inline-block;margin-bottom: 16px;text-align: center;text-decoration: none;border-radius: 24px;}
+.drops .minibio .simplelink{border: 0px solid rgba(180,180,180,1.0);width: 220px; color:rgba(180,180,180,1.0);font-family:'Open Sans',Helvetica,Arial,serif;font-weight:600;font-style:normal;font-size:14.0px;padding-top: 0px;padding-bottom: 12px;margin-top: 12px;display: inline-block;margin-bottom: 16px;text-align: center;text-decoration: none;border-radius: 24px;}
+.drops .minibio .simplelink:hover{border: 0px solid rgba(188,226,222,1.0);width: 220px; color:rgba(188,226,222,1.0);font-family:'Open Sans',Helvetica,Arial,serif;font-weight:600;font-style:normal;font-size:14.0px;padding-top: 0px;padding-bottom: 12px;margin-top: 12px;display: inline-block;margin-bottom: 16px;text-align: center;text-decoration: none;border-radius: 24px;}
 
 .drops .iconrow{position:absolute;margin:0px;left:0px}
 
 .drops .iconrow .ico-instagram{top:0px;position:absolute;margin:0;}
-.drops .iconrow .ico-instagram .bitmap{top:0;position:relative;margin:0;left:0}
-.drops .iconrow .ico-instagram .bitmap:hover{filter:sepia(100%);-webkit-filter:sepia(100%);}
+.drops .iconrow .ico-instagram .bitmap{top:0;position:relative;margin:0;left:0;filter: grayscale(100%);-webkit-filter: grayscale(100%);}
+.drops .iconrow .ico-instagram .bitmap:hover{filter: grayscale(0%);-webkit-filter: grayscale(0%);}
 .drops .iconrow .ico-behance{top:0px;position:absolute;margin:0;}
-.drops .iconrow .ico-behance .bitmap{top:0;position:relative;margin:0;left:0}
-.drops .iconrow .ico-behance .bitmap:hover{filter:sepia(100%);-webkit-filter:sepia(100%);}
+.drops .iconrow .ico-behance .bitmap{top:0;position:relative;margin:0;left:0;filter: grayscale(100%);-webkit-filter: grayscale(100%);}
+.drops .iconrow .ico-behance .bitmap:hover{filter: grayscale(0%);-webkit-filter: grayscale(0%);}
 .drops .iconrow .ico-linkedin{top:0;position:absolute;margin:0;}
-.drops .iconrow .ico-linkedin .bitmap{top:0;position:relative;margin:0;left:0}
-.drops .iconrow .ico-linkedin .bitmap:hover{filter:sepia(100%);-webkit-filter:sepia(100%);}
+.drops .iconrow .ico-linkedin .bitmap{top:0;position:relative;margin:0;left:0;filter: grayscale(100%);-webkit-filter: grayscale(100%);}
+.drops .iconrow .ico-linkedin .bitmap:hover{filter: grayscale(0%);-webkit-filter: grayscale(0%);}
 .drops .iconrow .ico-portfolio{top:0;position:absolute;margin:0;}
-.drops .iconrow .ico-portfolio .bitmap{top:0;position:relative;margin:0;left:0}
-.drops .iconrow .ico-portfolio .bitmap:hover{filter:sepia(100%);-webkit-filter:sepia(100%);}
+.drops .iconrow .ico-portfolio .bitmap{top:0;position:relative;margin:0;left:0;filter: grayscale(100%);-webkit-filter: grayscale(100%);}
+.drops .iconrow .ico-portfolio .bitmap:hover{filter: grayscale(0%);-webkit-filter: grayscale(0%);}
 
 
 @media screen and (max-width:639px){
@@ -57,7 +59,7 @@ div{-webkit-text-size-adjust:none}
   .drops .avatar{top:16px;height:160px;width:160px;left:80px}
   .drops .minibio{top:198px;width:240px;left:40px;font-size:16.0px}
   .drops .minibio span{font-size:18.0px}
-  .drops .iconrow{top:560px;height:32px;width:208px}
+  .drops .iconrow{top:600px;height:32px;width:208px}
   .drops .iconrow .ico-instagram{height:32px;width:32px;left:56px}
   .drops .iconrow .ico-instagram .bitmap{height:32px;width:32px}
   .drops .iconrow .ico-behance{height:32px;width:32px;left:112px}
@@ -75,7 +77,7 @@ div{-webkit-text-size-adjust:none}
   .drops .avatar{top:40px;height:230px;width:230px;left:235px}
   .drops .minibio{top:320px;width:240px;left:230px;font-size:16.0px}
   .drops .minibio span{font-size:18.0px}
-  .drops .iconrow{top:680px;height:32px;width:312px}
+  .drops .iconrow{top:720px;height:32px;width:312px}
   .drops .iconrow .ico-instagram{height:32px;width:32px;left:246px}
   .drops .iconrow .ico-instagram .bitmap{height:32px;width:32px}
   .drops .iconrow .ico-behance{height:32px;width:32px;left:302px}
@@ -93,7 +95,7 @@ div{-webkit-text-size-adjust:none}
   .drops .avatar{top:56px;height:256px;width:256px;left:592px}
   .drops .minibio{top:370px;width:440px;left:500px;font-size:18.0px}
   .drops .minibio span{font-size:24.0px}
-  .drops .iconrow{top:700px;height:48px;width:528px}
+  .drops .iconrow{top:740px;height:48px;width:528px}
   .drops .iconrow .ico-instagram{height:48px;width:48px;left:571px}
   .drops .iconrow .ico-instagram .bitmap{height:48px;width:48px}
   .drops .iconrow .ico-behance{height:48px;width:48px;left:651px}
